# l3-sarcopenia-ct-analysis

./: .env.example  .gitignore  CITATION.cff  LICENSE  PORTFOLIO_PROJECT_REVIEW.md  README.md  apply_tissue_masks_at_L3.py  compute_all_csa_smra.py  digitize_dicom.py  eval_dice_manual.py  eval_dice_manual_vs_TS.py  example_config.yaml  export_l3_pairs.py  make_all_plots.py  make_overlays_contour.py  make_overlays_manual_vs_slice.py  predict_l3_unet.py  pyproject.toml  requirements.txt  run_all_segmentation.py  sarcopenia_metrics.py  summarise_and_plot.py  train_l3_unet.py  write_l3_index_from_mask.py
app/: streamlit_app.py
docs/: data_privacy.md  demo_data.md  methodology.md  model_card.md
examples/: synthetic_metrics.csv
tests/: test_metrics.py
