[project]
name = "automated-tool-to-detect-sarcopenia"
version = "0.1.0"
description = "Research prototype for L3 sarcopenia analysis from CT imaging."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Research use only" }
authors = [
  { name = "Inioluwa Ashamu" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
